src/parser/parser_final.py
from ply import lex
from ply.lex import TOKEN
import ply.yacc as yacc
from lexer import *
import json
import argparse
import sys

## uncomment this for debugging

# def tracefunc(frame, event, arg, indent=[0]):
# 	  if event == "call":
# 		  indent[0] += 2
# 		  print ("-" * indent[0] + "> call function", frame.f_code.co_name)
# 	  elif event == "return":
# 		  print ("<" + "-" * indent[0], "exit function", frame.f_code.co_name)
# 		  indent[0] -= 2
# 	  return tracefunc
#
# sys.settrace(tracefunc)


"""
CITE:
  Most of the token definations are taken from documentation
  of golang(go docs), and some from the token (go/token)
  package of golang: https://golang.org/src/go/token/token.go
"""

ctr = 1
myout = ""


class Node:
	def __init__(self, leaf="", children=[]):
		if children:
			self.children = children
		else:
			self.children = None
		self.leaf = leaf
		self.parent = 0
		self.valid = True

def pre(node, parent):
	if node.children == None:
		return
	global ctr
	for i in node.children:
		if i == None:
			continue
		ctr += 1
		# print(i)
		i.parent = parent
		pre(i, ctr - 1)
	return node

def pre2(node):
	if node.children == None:
		return
	count = 0
	for i in node.children:
		if i != None:
			count += 1
	if count == 1:
		node.valid = False
	for child in node.children:
		if child != None:
			if count == 1:
				child.parent = node.parent
			pre2(child)

	return node


def gendot(x, parent):
	global myout
	global ctr

	if x.children == None:
		return
	for i in x.children:
		if i == None:
			continue
		if i.valid:
			myout += str(ctr) + ' [label="' + (i.leaf).replace('"','') + '"];\n'
			myout += str(i.parent) + ' -> ' + str(ctr) + ';\n'
		ctr += 1
		gendot(i, ctr - 1)


precedence = (
	('right', 'ASSIGN', 'NOT'),
	('left', 'LOR'),
	('left', 'LAND'),
	('left', 'OR'),
	('left', 'XOR'),
	('left', 'AND'),
	('left', 'EQL', 'NEQ'),
	('left', 'LSS', 'GTR', 'LEQ', 'GEQ'),
	('left', 'SHL', 'SHR'),
	('left', 'ADD', 'SUB'),
	('left', 'MUL', 'QUO', 'REM'),
)

# ------------------------START----------------------------


def p_start(p):
	'''start : SourceFile'''
	global ctr
	global myout
	p[0] = Node("start", [p[1]])

	p[0] = pre(p[0], 0)
	p[0] = pre2(p[0])
	ctr = 1
	gendot(p[0],ctr-1)
	out_file.write(myout)
# -------------------------------------------------------


# -----------------------TYPES---------------------------
def p_type(p):
	'''Type : TypeName
					| TypeLit
					| LPAREN Type RPAREN'''
	if len(p) == 4:
		# p[1] = Node(p[1])
		# p[3] = Node(p[3])
		# p[0] = Node("Type",[p[1],p[2],p[3]])
		p[0] = Node("Type",[p[2]])
	else:
		p[0] = Node("Type",[p[1]])


def p_type_name(p):
	'''TypeName : TypeToken
							| QualifiedIdent'''
	p[0] = Node("TypeName",[p[1]])


def p_type_token(p):
	'''TypeToken : INT
							 | FLOAT
							 | STRING
							 | BOOL
							 | COMPLEX
							 | TYPE IDENT'''
	if len(p) == 3:
		p[1] = Node(p[1])
		p[2] = Node(p[2])
		p[0] = Node("TypeToken", [p[1],p[2]])
	else:
		p[1] = Node(p[1])
		p[0] = Node("TypeToken", [p[1]])


def p_type_lit(p):
	'''TypeLit : ArrayType
					   | StructType
					   | PointerType'''
	p[0] = Node("TypeLit",[p[1]])


def p_type_opt(p):
	'''TypeOpt : Type
					   | epsilon'''
	if p[1] == "epsilon":
		p[0] = None
	else:
		p[0] = Node("TypeOpt", [p[1]])
# -------------------------------------------------------


# ------------------- ARRAY TYPE -------------------------
def p_array_type(p):
	'''ArrayType : LBRACK ArrayLength RBRACK ElementType'''
	# p[1] = Node(p[1])
	# p[3] = Node(p[3])
	# p[0] = Node("ArrayType", [p[1],p[2],p[3],p[4]])
	p[0] = Node("ArrayType", [p[2], p[4]])


def p_array_length(p):
	''' ArrayLength : Expression '''
	p[0] = Node("ArrayLength", [p[1]])


def p_element_type(p):
	''' ElementType : Type '''
	p[0] = Node("ElementType", [p[1]])

# --------------------------------------------------------


# ----------------- STRUCT TYPE ---------------------------
def p_struct_type(p):
	'''StructType : STRUCT LBRACE FieldDeclRep RBRACE'''
	p[1] = Node(p[1])
	# p[2] = Node(p[2])
	# p[4] = Node(p[4])
	# p[0] = Node("StructType", [p[1],p[2],p[3],p[4]])
	p[0] = Node("StructType", [p[1], p[3]])


def p_field_decl_rep(p):
	''' FieldDeclRep : FieldDeclRep FieldDecl SEMICOLON
									| epsilon '''
	if len(p) == 4:
		# p[3] = Node(p[3])
		# p[0] = Node("FieldDecl", [p[1],p[2],p[3]])
		p[0] = Node("FieldDecl", [p[1],p[2]])
	else:
		p[0] = None


def p_field_decl(p):
	''' FieldDecl : IdentifierList Type TagOpt'''
	p[0] = Node("FieldDecl", [p[1],p[2],p[3]])


def p_TagOpt(p):
	''' TagOpt : Tag
				| epsilon '''
	if p[1] == "epsilon":
		p[0] = None
	else:
		p[0] = Node("TagOpt", [p[1]])


def p_Tag(p):
	''' Tag : STRING_LITERAL '''
	p[1] = Node(p[1])
	p[0] = Node("Tag", [p[1]])
# ---------------------------------------------------------


# ------------------POINTER TYPES--------------------------
def p_point_type(p):
	'''PointerType : MUL BaseType'''
	p[1] = Node("*")
	p[0] = Node("PointerType", [p[1], p[2]])


def p_base_type(p):
	'''BaseType : Type'''
	p[0] = Node("BaseType", [p[1]])
# ---------------------------------------------------------


# ---------------FUNCTION TYPES----------------------------
def p_sign(p):
	'''Signature : Parameters ResultOpt'''
	p[0] = Node("Signature", [p[1], p[2]])


def p_result_opt(p):
	'''ResultOpt : Result
							 | epsilon'''
	if p[1] == "epsilon":
		p[0] = None
	else:
		p[0] = Node("ResultTop", [p[1]])


def p_result(p):
	'''Result : Parameters
					  | Type'''
	p[0] = Node("Result", [p[1]])


def p_params(p):
	'''Parameters : LPAREN ParameterListOpt RPAREN'''
	# p[1] = Node("(")
	# p[3] = Node(")")
	# p[0] = Node("Parameters", [p[1], p[2], p[3]])
	p[0] = Node("Parameters", [p[2]])


def p_param_list_opt(p):
	'''ParameterListOpt : ParametersList
													 | epsilon'''
	if p[1] == "epsilon":
		p[0] = None
	else:
		p[0] = Node("ParameterListOpt", [p[1]])


def p_param_list(p):
	'''ParametersList : Type
									  | IdentifierList Type
									  | ParameterDeclCommaRep'''
	if len(p) == 3:
		p[0] = Node("ParameterList", [p[1], p[2]])
	else:
		p[0] = Node("ParameterList", [p[1]])


def p_param_decl_comma_rep(p):
	'''ParameterDeclCommaRep : ParameterDeclCommaRep COMMA ParameterDecl
													 | ParameterDecl COMMA ParameterDecl'''
	p[2] = Node(",")
	p[0] = Node("ParameterDeclCommaRep", [p[1], p[2], p[3]])


def p_param_decl(p):
	'''ParameterDecl : IdentifierList Type
									 | Type'''
	if len(p) == 3:
		p[0] = Node("ParameterDecl", [p[1], p[2]])
	else:
		p[0] = Node("ParameterDecl", [p[1]])
# ---------------------------------------------------------


# -----------------------BLOCKS---------------------------
def p_block(p):
	'''Block : LBRACE StatementList RBRACE'''
	# p[1] = Node("{")
	# if p[2] != None:
	# 	p[2] = Node("StatementList",p[2].children)
	# p[3] = Node("}")
	# p[0] = Node("Block", [p[1], p[2], p[3]])
	p[0] = Node("Block", [p[2]])


def p_stat_list(p):
	'''StatementList : StatementRep'''
	# p[0] = Node("StatementList", [p[1]])
	p[0] = p[1]


def p_stat_rep(p):
	'''StatementRep : StatementRep Statement SEMICOLON
									| epsilon'''
	if len(p) == 4:
		# p[3] = Node(";")
		# p[0] = Node("StatementRep", [p[1], p[2], p[3]])
		mylist = []
		if p[1] != None:
			mylist.extend(p[1].children)
		mylist.append(p[2])
		p[0] = Node("StatementRep",mylist)
	else:
		p[0] = None
# -------------------------------------------------------


# ------------------DECLARATIONS and SCOPE------------------------
def p_decl(p):
	'''Declaration : ConstDecl
								   | TypeDecl
								   | VarDecl'''
	p[0] = Node("Declaration", [p[1]])


def p_toplevel_decl(p):
	'''TopLevelDecl : Declaration
									| FunctionDecl'''
	p[0] = Node("TopLevelDecl", [p[1]])
# -------------------------------------------------------


# ------------------CONSTANT DECLARATIONS----------------
def p_const_decl(p):
	'''ConstDecl : CONST ConstSpec
							 | CONST LPAREN ConstSpecRep RPAREN'''
	p[1] = Node(p[1])
	if len(p) == 3:
		p[0] = Node("ConstDecl", [p[1], p[2]])
	else:
		# p[2] = Node(p[2])
		# p[4] = Node(p[4])
		# p[0] = Node("ConstDecl", [p[1], p[2], p[3], p[4]])
		p[0] = Node("ConstDecl", [p[1], p[3]])


def p_const_spec_rep(p):
	'''ConstSpecRep : ConstSpecRep ConstSpec SEMICOLON
									| epsilon'''
	if len(p) == 4:
		# p[3] = Node(p[3])
		# p[0] = Node("ConstSpecRep", [p[1], p[2], p[3]])
		p[0] = Node("ConstSpecRep", [p[1], p[2]])
	else:
		p[0] = None


def p_const_spec(p):
	'''ConstSpec : IdentifierList TypeExprListOpt'''
	p[0] = Node("ConstSpec", [p[1], p[2]])


def p_type_expr_list(p):
	'''TypeExprListOpt : TypeOpt ASSIGN ExpressionList
									   | epsilon'''
	if len(p) == 4:
		p[2] = Node(p[2])
		p[0] = Node("TypeExprListOpt", [p[1], p[2], p[3]])
	else:
		p[0] = None


def p_identifier_list(p):
	'''IdentifierList : IDENT IdentifierRep'''
	p[1] = Node(p[1])
	p[0] = Node("IdentifierList", [p[1], p[2]])


def p_identifier_rep(p):
	'''IdentifierRep : IdentifierRep COMMA IDENT
									 | epsilon'''
	if len(p) == 4:
		p[2] = Node(p[2])
		p[3] = Node(p[3])
		p[0] = Node("IdentifierRep", [p[1], p[2], p[3]])
	else:
		p[0] = None


def p_expr_list(p):
	'''ExpressionList : Expression ExpressionRep'''
	p[0] = Node("ExpressionList", [p[1], p[2]])


def p_expr_rep(p):
	'''ExpressionRep : ExpressionRep COMMA Expression
									 | epsilon'''
	if len(p) == 4:
		p[2] = Node(p[2])
		p[0] = Node("ExpressionRep", [p[1], p[2], p[3]])
	else:
		p[0] = None
# -------------------------------------------------------


# ------------------TYPE DECLARATIONS-------------------
def p_type_decl(p):
	'''TypeDecl : TYPE TypeSpec
							| TYPE LPAREN TypeSpecRep RPAREN'''
	if len(p) == 5:
		p[1] = Node(p[1])
		# p[2] = Node(p[2])
		# p[4] = Node(p[4])
		# p[0] = Node("TypeDecl", [p[1],p[2],p[3],p[4]])
		p[0] = Node("TypeDecl", [p[1], p[3]])
	else:
		p[1] = Node(p[1])
		p[0] = Node("TypeDecl", [p[1],p[2]])


def p_type_spec_rep(p):
	'''TypeSpecRep : TypeSpecRep TypeSpec SEMICOLON
							   | epsilon'''
	if len(p) == 4:
		# p[3] = Node(p[3])
		# p[0] = Node("TypeSpecRep", [p[1],p[2],p[3]])
		p[0] = Node("TypeSpecRep", [p[1],p[2]])
	else:
		p[0] = None


def p_type_spec(p):
	'''TypeSpec : AliasDecl
							| TypeDef'''
	p[0] = Node("AliasDecl", [p[1]])


def p_alias_decl(p):
	'''AliasDecl : IDENT ASSIGN Type'''
	p[1] = Node(p[1])
	p[2] = Node(p[2])
	p[0] = Node("AliasDecl", [p[1],p[2],p[3]])
# -------------------------------------------------------


# -------------------TYPE DEFINITIONS--------------------
def p_type_def(p):
	'''TypeDef : IDENT Type'''
	p[1] = Node(p[1])
	p[0] = Node("TypeDef", [p[1],p[2]])
# -------------------------------------------------------


# ----------------VARIABLE DECLARATIONS------------------
def p_var_decl(p):
	'''VarDecl : VAR VarSpec
					   | VAR LPAREN VarSpecRep RPAREN'''
	if len(p) == 3:
		p[1] = Node(p[1])
		p[0] = Node("VarDecl", [p[1],p[2]])
	else:
		p[1] = Node(p[1])
		# p[2] = Node(p[2])
		# p[4] = Node(p[4])
		# p[0] = Node("VarDecl", [p[1],p[2],p[3],p[4]])
		p[0] = Node("VarDecl", [p[1], p[3]])


def p_var_spec_rep(p):
	'''VarSpecRep : VarSpecRep VarSpec SEMICOLON
							  | epsilon'''
	if len(p) == 4:
		# p[3] = Node(p[3])
		# p[0] = Node("VarSpecRep", [p[1],p[2],p[3]])
		p[0] = Node("VarSpecRep", [p[1],p[2]])
	else:
		p[0] = None


def p_var_spec(p):
	'''VarSpec : IdentifierList Type ExpressionListOpt
					   | IdentifierList ASSIGN ExpressionList'''
	if p[2] == '=':
		p[2] = Node(p[2])
		p[0] = Node("VarSpec", [p[1],p[2],p[3]])
	else:
		p[0] = Node("VarSpec", [p[1],p[2],p[3]])


def p_expr_list_opt(p):
	'''ExpressionListOpt : ASSIGN ExpressionList
											 | epsilon'''
	if len(p) == 3:
		p[1] = Node(p[1])
		p[0] = Node("ExpressionListOpt", [p[1],p[2]])
	else:
		p[0] = None
# -------------------------------------------------------


# ----------------SHORT VARIABLE DECLARATIONS-------------
def p_short_var_decl(p):
	''' ShortVarDecl : IDENT DEFINE Expression '''
	p[1] = Node(p[1])
	# p[2] = Node(p[2])
	p[0] = Node("ShortVarDecl" + p[2], [p[1],p[3]])
# -------------------------------------------------------


# ----------------FUNCTION DECLARATIONS------------------
def p_func_decl(p):
	'''FunctionDecl : FUNC FunctionName Function
									| FUNC FunctionName Signature'''
	p[1] = Node(p[1])
	p[0] = Node("FunctionDecl", [p[1],p[2],p[3]])


def p_func_name(p):
	'''FunctionName : IDENT'''
	p[1] = Node(p[1])
	p[0] = Node("FunctionName", [p[1]])


def p_func(p):
	'''Function : Signature FunctionBody'''
	p[0] = Node("Function", [p[1],p[2]])


def p_func_body(p):
	'''FunctionBody : Block'''
	p[0] = Node("FunctionBody", [p[1]])
# -------------------------------------------------------


# ----------------------OPERAND----------------------------
def p_operand(p):
	'''Operand : Literal
					   | OperandName
					   | LPAREN Expression RPAREN'''
	if len(p) == 2:
		p[0] = Node("Operand", [p[1]])
	else:
		p[0] = Node("Operand", [p[2]])


def p_literal(p):
	'''Literal : BasicLit'''
	p[0] = Node("Literal", [p[1]])


def p_basic_lit(p):
	'''BasicLit : INT_LITERAL
							| FLOAT_LITERAL
							| STRING_LITERAL
							| IMAG
							'''
	p[1] = Node(p[1])
	p[0] = Node("BasicLit", [p[1]])


def p_operand_name(p):
	'''OperandName : IDENT'''
	p[1] = Node(p[1])
	p[0] = Node("OperandName", [p[1]])
# ---------------------------------------------------------


# -------------------QUALIFIED IDENT----------------
def p_quali_ident(p):
	'''QualifiedIdent : IDENT PERIOD TypeName'''
	p[1] = Node(p[1])
	p[2] = Node(p[2])
	p[0] = Node("QualifiedIdent", [p[1], p[2], p[3]])
# -------------------------------------------------------


# -----------------COMPOSITE LITERALS----------------------
def p_comp_lit(p):
	'''CompositeLit : LiteralType LiteralValue'''
	p[0] = Node("CompositeLit", [p[1], p[2]])


def p_lit_type(p):
	'''LiteralType : ArrayType
							   | ElementType
							   | TypeName'''
	p[0] = Node("LiteralType", [p[1]])


def p_lit_val(p):
	'''LiteralValue : LBRACE ElementListOpt RBRACE'''
	p[0] = Node("LiteralValue", [p[2]])


def p_elem_list_comma_opt(p):
	'''ElementListOpt : ElementList
											   | epsilon'''
	if p[1] == "epsilon":
		p[0] = None
	else:
		p[0] = Node("ElementListOpt", [p[1]])


def p_elem_list(p):
	'''ElementList : KeyedElement KeyedElementCommaRep'''
	p[0] = Node("ElementList", [p[1], p[2]])


def p_key_elem_comma_rep(p):
	'''KeyedElementCommaRep : KeyedElementCommaRep COMMA KeyedElement
													| epsilon'''
	if len(p) == 4:
		p[2] = Node(p[2])
		p[0] = Node("KeyedElementCommaRep", [p[1], p[2], p[3]])
	else:
		p[0] = None


def p_key_elem(p):
	'''KeyedElement : Key COLON Element
									| Element'''
	if len(p) == 4:
		p[2] = Node(p[2])
		p[0] = Node("KeyedElement", [p[1], p[2], p[3]])
	else:
		p[0] = Node("KeyedElement", [p[1]])


def p_key(p):
	'''Key : FieldName
			   | Expression
			   | LiteralValue'''
	p[0] = Node("Key", [p[1]])


def p_field_name(p):
	'''FieldName : IDENT'''
	p[1] = Node(p[1])
	p[0] = Node("FieldName", [p[1]])


def p_elem(p):
	'''Element : Expression
					   | LiteralValue'''
	p[0] = Node("Element", [p[1]])
# ---------------------------------------------------------


# ------------------PRIMARY EXPRESSIONS--------------------
def p_prim_expr(p):
	'''PrimaryExpr : Operand
							   | PrimaryExpr Selector
							   | Conversion
							   | PrimaryExpr Index
							   | PrimaryExpr Slice
							   | PrimaryExpr TypeAssertion
							   | PrimaryExpr Arguments'''
	if len(p) == 2:
		p[0] = Node("PrimaryExpr", [p[1]])
	else:
		p[0] = Node("PrimaryExpr", [p[1], p[2]])


def p_selector(p):
	'''Selector : PERIOD IDENT'''
	p[1] = Node(p[1])
	p[2] = Node(p[2])
	p[0] = Node("Selector", [p[1], p[2]])


def p_index(p):
	'''Index : LBRACK Expression RBRACK'''
	p[0] = Node("Index", [p[2]])

def p_slice(p):
	'''Slice : LBRACK ExpressionOpt COLON ExpressionOpt RBRACK
					 | LBRACK ExpressionOpt COLON Expression COLON Expression RBRACK'''
	if len(p) == 6:
		# p[1] = Node(p[1])
		p[3] = Node(p[3])
		# p[5] = Node(p[5])
		# p[0] = Node("Slice", [p[1], p[2], p[3], p[4], p[5]])
		p[0] = Node("Slice", [p[2], p[3], p[4]])
	else:
		# p[1] = Node(p[1])
		p[3] = Node(p[3])
		p[5] = Node(p[5])
		# p[7] = Node(p[7])
		# p[0] = Node("Slice", [p[1], p[2], p[3], p[4], p[5], p[6], p[7]])
		p[0] = Node("Slice", [p[2], p[3], p[4], p[5], p[6]])

def p_type_assert(p):
	'''TypeAssertion : PERIOD LPAREN Type RPAREN'''
	p[1] = Node(p[1])
	# p[2] = Node(p[2])
	# p[4] = Node(p[4])
	# p[0] = Node("TypeAssertion", [p[1], p[2], p[3], p[4]])
	p[0] = Node("TypeAssertion", [p[1], p[3]])


def p_argument(p):
	'''Arguments : LPAREN ExpressionListTypeOpt RPAREN'''
	# p[1] = Node(p[1])
	# p[3] = Node(p[3])
	# p[0] = Node("Arguments", [p[1], p[2], p[3]])
	p[0] = Node("Arguments", [p[2]])


def p_expr_list_type_opt(p):
	'''ExpressionListTypeOpt : ExpressionList
													 | epsilon'''
	if p[1] != "epsilon":
		p[0] = Node("ExpressionListTypeOpt", [p[1]])
	else:
		p[0] = None


def p_expr_list_comma_opt(p):
	'''ExpressionListCommaOpt : COMMA ExpressionList
													  | epsilon'''
	if len(p) == 3:
		p[1] = Node(p[1])
		p[0] = Node("ExpressionListCommaOpt", [p[1], p[2]])
	else:
		p[0] = None
# ---------------------------------------------------------


# ----------------------OPERATORS-------------------------
def p_expr(p):
	'''Expression : UnaryExpr
							  | Expression BinaryOp Expression'''
	if len(p) == 4:
		p[0] = Node("Expression: " + p[2], [p[1], p[3]])
	else:
		p[0] = Node("Expression", [p[1]])


def p_expr_opt(p):
	'''ExpressionOpt : Expression
									 | epsilon'''
	if p[1] == "epsilon":
		p[0] = None
	else:
		# p[1] = Node(p[1])
		p[0] = Node("ExpressionOpt", [p[1]])


def p_unary_expr(p):
	'''UnaryExpr : PrimaryExpr
							 | UnaryOp UnaryExpr
							 | NOT UnaryExpr'''
	if len(p) == 3 and p[1] != "!":
		p[0] = Node("UnaryExpr " + p[1], [p[2]])
	elif len(p) == 3 and p[1] == "!":
		p[1] = Node(p[1])
		p[0] = Node("UnaryExpr " + p[1], [p[2]])
	else:
		p[0] = Node("UnaryExpr", [p[1]])


def p_binary_op(p):
	'''BinaryOp : LOR
							| LAND
							| RelOp
							| AddMulOp'''
	# if p[1] == "||" or p[1] == "&&":
	# 	p[1] = Node(p[1])
	# 	p[0] = Node("BinaryOp", [p[1]])
	# else:
	# 	p[0] = Node("BinaryOp", [p[1]])
	p[0] = p[1]


def p_rel_op(p):
	'''RelOp : EQL
					 | NEQ
					 | LSS
					 | GTR
					 | LEQ
					 | GEQ'''
	# p[1] = Node(p[1])
	# p[0] = Node("RelOp", [p[1]])
	p[0] = p[1]

